--- a/gelson/lojas.html
+++ b/gelson/lojas.html
@@ -32,7 +32,7 @@
                             <div class="mm_line"></div>
                         </div>
                         <ul>
-                            <li class="active"><a href="index1.html">Inicio</a> </li>
+                            <li class="active"><a href="index.html">Inicio</a> </li>
                             <li><a href="lojas.html">Lojas</a> </li>
                             <li><a href="">Contato</a> </li>
                             <li><a href="">Sobre</a> </li>
