--- a/gelson/index.html
+++ b/gelson/index.html
@@ -33,9 +33,9 @@
                         </div>
                         <ul>
                             <li class="active"><a href="index1.html">Inicio</a> </li>
-                            <li><a href="lojas.html">Lojas</a> </li>
-                            <li><a href="">Contato</a> </li>
-                            <li><a href="">Sobre</a> </li>
+                            <li><a href="lojas.html" target="_blank">Lojas</a> </li>
+                            <li><a href="contato.html" target="_blank">Contato</a> </li>
+                            <li><a href="sobre.html" target="_blank">Sobre</a> </li>
                         </ul>
                     </nav>
                 </div>
@@ -48,14 +48,16 @@
 
         <main>
             <div class="imagem">
-                <img src="./images/back.jpg">
+                <img src="https://scontent.faju6-1.fna.fbcdn.net/v/t1.0-0/p180x540/116334541_1186595298386323_1567888521838428291_o.jpg?_nc_cat=111&ccb=2&_nc_sid=e3f864&_nc_ohc=PgPjg4Nd6a8AX_lE46Y&_nc_ht=scontent.faju6-1.fna&tp=6&oh=5baedebab0ee366893e6201a46466118&oe=5FE72094">
             </div>
+            <!--
             <div class="text">
+
                 <p>Gelson Materiais de Construção</p>
                 <p>&</p>
                 <p>Griffe Móveis & Eletros</p>
             </div>
-
+            -->
             <div class="row">
                 <i class=italico>Novidades</i>
                 <span class=negrito>Em Destaque</span>
@@ -69,11 +71,12 @@
                     </div>
                     <div class="span-produtos">
                         <span>
-                        - Quer comer saudável<br>
-                        - Tem uma rotina corrida<br>
-                        - Almoça ou janta fora de casa<br>
-                        - Não tem microondas<br>
-                        - Quer economizar na alimentação
+                        É IDEAL PRA VOCÊ QUE!<br>
+                        Quer comer saudável<br>
+                        Tem uma rotina corrida<br>
+                        Almoça ou janta fora de casa<br>
+                        Não tem microondas<br>
+                        Quer economizar na alimentação
                         </span>
                     </div>
                 </div>
@@ -85,12 +88,12 @@
                     </div>
                     <div class="span-produtos">
                         <span>
-                        - Qualidade alinhada ao preço só aqui na Griffe<br>
-                        - Móveis e Eletros, o estofado perfeito pra você!<br>
-                        - Altura 0,93<br>
-                        - Largura 0,75<br>
-                        - Comprimento 2,30 x 2,30<br>
-                        - VENHA CONFERIR!</span>
+                        Qualidade alinhada ao preço só aqui na Griffe<br>
+                        Móveis e Eletros, o estofado perfeito pra você!<br>
+                        Altura 0,93<br>
+                        Largura 0,75<br>
+                        Comprimento 2,30 x 2,30<br>
+                        VENHA CONFERIR!</span>
                     </div>
                 </div>
 
@@ -115,7 +118,7 @@
                         <h4>Triturador forrageiro</h4>
                     </div>
                     <div class="span-produtos">
-                        <span class="span-produtos">
+                        <span>
                             Seja para a produção de alimento dos animais
                             ou para a preparação do adubo natural.
                             O equipamento é indicado para cortar e triturar forragens
@@ -132,11 +135,7 @@
                     </div>
                     <div class="span-produtos">
                         <span>
-                            - Quer comer saudável<br>
-                            - Tem uma rotina corrida<br>
-                            - Almoça ou janta fora de casa<br>
-                            - Não tem microondas<br>
-                            - Quer economizar na alimentação</span>
+                            Apresentamos a você o Estofado Mesquita. Retrátil que proporciona conforto e qualidade em um só produto, na Griffe Móveis e Eletros você encontra.</span>
                     </div>
                 </div>
 
@@ -147,45 +146,92 @@
                     </div>
                     <div class="span-produtos">
                         <span>
-                            - Quer comer saudável<br>
-                            - Tem uma rotina corrida<br>
-                            - Almoça ou janta fora de casa<br>
-                            - Não tem microondas<br>
-                            - Quer economizar na alimentação</span>
+                            Útil em vários setores, se destacando no segmento automotivo, manutenção de máquinas. Possuem ambos os lados com medidas iguais, sendo um lado fixa e o outro estrela</span>
                     </div>
                 </div>
 
                 <div>
                     <img src="./images/prod7.jpg" alt="produto1">
                     <div class="titulo-produtos">
-                        <h4>Caixas para correspondências</h4>
+                        <h4>Caixa para correspondência</h4>
                     </div>
                     <div class="span-produtos">
-                    <span>
-                        - Qualidade alinhada ao preço só aqui na Griffe<br>
-                        - Móveis e Eletros, o estofado perfeito pra você!<br>
-                        - Altura 0,93<br>
-                        - Largura 0,75<br>
-                        - Comprimento 2,30 x 2,30<br>
-                        - VENHA CONFERIR!</span>
+                        <span>
+                            Caixa de Correios, produzida em plástico super resistente, pode ser tanto instalada em portões, quanto pode ser embutida em paredes. Acompanha parafusos para instalação.</span>
                     </div>
                 </div>
 
                 <div>
                     <img src="./images/prod8.jpg" alt="produto1">
                     <div class="titulo-produtos">
-                        <h4>aquecedor de alimentos</h4>
+                        <h4>Lixeira Inox</h4>
                     </div>
                     <div class="span-produtos">
-                        <span class="span-produtos">
-                            - Quer comer saudável<br>
-                            - Tem uma rotina corrida<br>
-                            - Almoça ou janta fora de casa<br>
-                            - Não tem microondas<br>
-                            - Quer economizar na alimentação</span>
+                        <span>
+                            A Lixeira Ágata da Mor traz brilho e modernidade ao seu espaço, que pode ser a cozinha, o banheiro ou o escritório da sua casa ou trabalho!</span>
                     </div>
                 </div>
 
+            </section>
+            
+            <div class="row fundo">
+                <i class="italico black">BLACK FRIDAY</i>
+                <span class="negrito ano">2020</span>
+            </div>
+
+            <section class="flex" style="background-color: black">
+                <div>
+                    <img src="./images/feirao.png" alt="produto1">
+                    <div class="titulo-produtos produto-cor">
+                        <h4>Feirão de Natal com preços de Black Friday é na Griffe Móveis e Eletros!</h4>
+                    </div>
+                    <div class="span-produtos">
+                        <span style="color:gold">
+                            
+                            Toda a loja em promoção de 25/11 a 09/12/2020, corra e aproveite!
+                            Grupo G5, tudo o que você precisa!
+                        </span>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="./images/feirao.png" alt="produto1">
+                    <div class="titulo-produtos produto-cor">
+                        <h4>Feirão de Natal com preços de Black Friday é na Griffe Móveis e Eletros!</h4>
+                    </div>
+                    <div class="span-produtos">
+                        <span style="color:gold">
+                            Toda a loja em promoção de 25/11 a 09/12/2020, corra e aproveite!
+                            Grupo G5, tudo o que você precisa!
+                        </span>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="./images/feirao.png" alt="produto1">
+                    <div class="titulo-produtos produto-cor">
+                        <h4>Feirão de Natal com preços de Black Friday é na Griffe Móveis e Eletros!</h4>
+                    </div>
+                    <div class="span-produtos">
+                        <span style="color:gold">
+                            Toda a loja em promoção de 25/11 a 09/12/2020, corra e aproveite!
+                            Grupo G5, tudo o que você precisa!
+                        </span>
+                    </div>
+                </div>
+
+                <div>
+                    <img src="./images/feirao.png" alt="produto1">
+                    <div class="titulo-produtos produto-cor">
+                        <h4>Feirão de Natal com preços de Black Friday é na Griffe Móveis e Eletros!</h4>
+                    </div>
+                    <div class="span-produtos">
+                        <span style="color:gold;">
+                            Toda a loja em promoção de 25/11 a 09/12/2020, corra e aproveite!
+                            Grupo G5, tudo o que você precisa!
+                        </span>
+                    </div>
+                </div>
             </section>
 
 
