--- a/gelson/lojas.html
+++ b/gelson/lojas.html
@@ -32,10 +32,10 @@
                             <div class="mm_line"></div>
                         </div>
                         <ul>
-                            <li class="active"><a href="index.html">Inicio</a> </li>
-                            <li><a href="lojas.html">Lojas</a> </li>
-                            <li><a href="">Contato</a> </li>
-                            <li><a href="">Sobre</a> </li>
+                            <li class="active"><a href="index1.html">Inicio</a> </li>
+                            <li><a href="lojas.html" target="_blank">Lojas</a> </li>
+                            <li><a href="contato.html" target="_blank">Contato</a> </li>
+                            <li><a href="sobre.html" target="_blank">Sobre</a> </li>
                         </ul>
                     </nav>
                 </div>
@@ -48,15 +48,17 @@
 
         <main>
             <div class="imagem">
-                <img src="./images/back.jpg">
+                <img src="https://scontent.faju6-1.fna.fbcdn.net/v/t1.0-0/p180x540/116334541_1186595298386323_1567888521838428291_o.jpg?_nc_cat=111&ccb=2&_nc_sid=e3f864&_nc_ohc=PgPjg4Nd6a8AX_lE46Y&_nc_ht=scontent.faju6-1.fna&tp=6&oh=5baedebab0ee366893e6201a46466118&oe=5FE72094">
             </div>
-            <div class="text">
-                <p>Gelson Materiais de Construção</p>
-                <p>&</p>
-                <p>Griffe Móveis & Eletros</p>
-            </div>
-            
         </main>
+
+        <section>
+            <div>
+                <h1 style="text-align: center;">
+                    EM PROGRESSO!
+                </h1>
+            </div>
+        </section>
 
         <footer id="footer">
             <div class=footer_area>
