--- a/cameras/index.html
+++ b/cameras/index.html
@@ -21,49 +21,49 @@
         <nav class="geral">
         	<div class="nome">CÂMERAS AO VIVO AO REDOR DO MUNDO</div>
             <div class="nav3">
-                <img id="um" src="http://46.26.42.148:8090/mjpg/video.mjpg?camera=1&timestamp=1526459995735"/>
+                <img id="um" src="http://50.28.225.134:83/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://6f3806c8f072.sn.mynetname.net:221/mjpg/video.mjpg?timestamp=1565084325217"/>
+                <img id="um" src="http://223.205.59.177:3548/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://212.67.236.61/mjpg/video.mjpg?camera=1&timestamp=1561621294984"/>
+                <img id="um" src="http://83.160.112.104:82/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://69.193.53.42:9000/mjpg/video.mjpg?timestamp=1442003368825"/>
+                <img id="um" src="http://24.137.117.192/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://67.53.46.161:65123/mjpg/video.mjpg?camera=1&timestamp=1562376536164"/>
+                <img id="um" src="http://82.194.144.249:8888/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://81.62.149.154:25500/mjpg/video.mjpg?camera=3&resolution=D1&squarepixel=0&compression=30&color=1&mirror=0&rotation=0&textsize=small&textposition=top&textbackgroundcolor=black&textcolor=white&text=0&clock=0&date=0&overlayimage=0&fps=0&audio=0&keyframe_interval=32&videobitrate=0&maxframesize=0&text=1&textstring=Compression:%23c%20Frame%20size:%23F%20kbytes%20FPS:%23r&timestamp=1600177834515"/>
+                <img id="um" src="http://62.45.108.115:1400/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://150.214.222.100/mjpg/video.mjpg"/>
+                <img id="um" src="http://79.156.59.90:8888/mjpg/1/video.mjpg"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://128.208.252.2/mjpg/video.mjpg"/>
+                <img id="um" src="http://91.184.171.191/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://webcam.schloss-neubeuern.de/mjpg/video.mjpg"/>
+                <img id="um" src="http://12.234.220.61:8888/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://webkamera.overtornea.se/mjpg/video.mjpg"/>
+                <img id="um" src="http://205.237.248.39/mjpg/1/video.mjpg"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://climatecam.gi.alaska.edu/mjpg/video.mjpg"/>
+                <img id="um" src="http://185.86.212.131:8881/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
                 <img id="um" src="https://myndavel-sandur.dalvikurbyggd.is/mjpg/video.mjpg?streamprofile=web"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://towercam04.rep-am.com:8084/mjpg/video.mjpg"/>
+                <img id="um" src="http://86.49.161.121/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-            	<embed id="um" src="http://50.73.133.156:89/ViewerFrame?Mode=Motion&Resolution=640x480&Quality=Standard&Interval=30&Size=STD" loop="loop"/>
+            	<embed id="um" src="http://139.13.30.135/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nav3">
-                <img id="um" src="http://webkamera.overtornea.se/mjpg/video.mjpg"/>
+                <img id="um" src="http://93.99.21.98:88/axis-cgi/mjpg/video.cgi"/>
             </div>
             <div class="nome">CÂMERAS AO VIVO NO BRASIL</div>
         </nav>
