--- a/cameras/index.html
+++ b/cameras/index.html
@@ -21,7 +21,7 @@
         <nav class="geral">
         	<div class="nome">CÂMERAS AO VIVO AO REDOR DO MUNDO</div>
             <div class="nav3">
-                <img id="um" src="http://109.233.191.130:8080/cam_1.cgi"/>
+                <img id="um" src="blob:https://www.climaaovivo.com.br/04d9829b-552f-4abb-9391-d9035e0ffb7f"/>
             </div>
             <div class="nav3">
                 <img id="um" src="http://223.205.59.177:3548/axis-cgi/mjpg/video.cgi"/>
