--- a/cameras/index.html
+++ b/cameras/index.html
@@ -23,6 +23,10 @@
             <div class="nav3">
                 <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_esplanada-2/last/esplanada2.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/04d9829b-552f-4abb-9391-d9035e0ffb7f"></video>
             </div>
+            <br><br>
+            <div class="nav3">
+                <img id="um" src="http://223.205.59.177:3548/axis-cgi/mjpg/video.cgi"/>
+            </div>
             <div class="nav3">
                 <img id="um" src="http://223.205.59.177:3548/axis-cgi/mjpg/video.cgi"/>
             </div>
