--- a/cameras/index.html
+++ b/cameras/index.html
@@ -28,7 +28,7 @@
                 <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_camacari-1/last/camacari1.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/9b902ee3-c645-45d8-b855-6228b6bd0a8d"></video>
             </div>
             <div class="nav3">
-                                video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_esplanada-2/last/esplanada2.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/04d9829b-552f-4abb-9391-d9035e0ffb7f"></video>
+                <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_esplanada-2/last/esplanada2.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/04d9829b-552f-4abb-9391-d9035e0ffb7f"></video>
             </div>
             
             <div class="nome">CÂMERAS AO VIVO NO BRASIL</div>
