--- a/cameras/index.html
+++ b/cameras/index.html
@@ -24,11 +24,17 @@
             <div class="nav3">
                 <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_esplanada-2/last/esplanada2.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/04d9829b-552f-4abb-9391-d9035e0ffb7f"></video>
             </div>
+            <br><br>
             <div class="nav3">
                 <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_camacari-1/last/camacari1.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/9b902ee3-c645-45d8-b855-6228b6bd0a8d"></video>
             </div>
+            <br><br>
             <div class="nav3">
                 <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/ba_esplanada-2/last/esplanada2.ba_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/04d9829b-552f-4abb-9391-d9035e0ffb7f"></video>
+            </div>
+            <br><br>
+            <div class="nav3">
+                <video id="my-video_html5_api" class="vjs-tech" poster="https://cavsnapshots.s3.us-east-1.amazonaws.com/se_aracaju-2/last/aracaju2.se_now.jpg" tabindex="-1" src="blob:https://www.climaaovivo.com.br/7bef25d1-5161-412b-941c-f19182984434"></video>
             </div>
             
             <div class="nome">CÂMERAS AO VIVO NO BRASIL</div>
